Update index.html and style.css

--- a/index.html
+++ b/index.html
@@ -7,39 +7,53 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="links">
+        <h4 style="margin: 10px;">Header Logo</h4>
+        <ul>
+            <li>header link one</li>
+            <li>header link two</li>
+            <li>header link three</li>
+        </ul>
+    </div>
 <div class="header">
-    <h4>Header Logo</h4>
-    <ul>
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
-    </ul>
+
+<div class="headtext"> 
     <h1>This website is awesome</h1>
     <p class="subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
     <button>Sign up</button>
+</div>       
     <img>
 </div>
 
     <h2>Some random information.</h2>  
 <div class="content">
+   <div class="info">
     <img src="media/swan.jpg" width="150px">
     <p>This is some subtext under an illustration or an image</p> 
+   </div>  
+  <div class="info">
     <img src="media/swan.jpg" width="150px">
-    <p>This is some subtext under an illustration or an image</p>
+    <p>This is some subtext under an illustration or an image</p> 
+   </div>
+  <div class="info">
     <img src="media/swan.jpg" width="150px">
-    <p>This is some subtext under an illustration or an image</p>
+    <p>This is some subtext under an illustration or an image</p> 
+  </div>     
+  <div class="info">
     <img src="media/swan.jpg" width="150px">
-    <p>This is some subtext under an illustration or an image</p>
+    <p>This is some subtext under an illustration or an image</p> 
+   </div>  
 </div>
 <div class="quote">
-    <p>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
+    <p class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? 
         All i know is that it looks nice.
     </p>
     <strong>-Thor, God of Thunder</strong>
 </div>
 <div class="signup">
-    <p>Call to action! It's time!</p>
-    <p>Sign up for our product by clicking that button right over there!</p>
+    <div>
+    <p>Call to action! It's time!<br>Sign up for our product by clicking that button right over there!</p>
+    </div>
     <button>Sign up</button>
 </div>
 
